--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,11 +54,23 @@
               <td>{{lancamento.descricao}}</td>
               <td class="col-data-content">{{lancamento.dataVencimento}}</td>
               <td class="col-data-content">{{lancamento.dataPagamento}}</td>
-              <td class="col-valor-content">{{lancamento.valor}}</td>
+              <td class="col-valor-content"
+                [ngStyle]="{ color: lancamento.tipo === 'DESPESA' ? 'red' : 'blue'}">
+                {{lancamento.valor}}
+              </td>
+              <!-- icones edit and delete -->
+              <td class="col-acoes">
+                <a pButton icon="pi pi-pencil"></a>
+                <button pButton icon="pi pi-trash"></button>
+              </td>
             </tr>
         </ng-template>
       </p-table>
     <!-- closing div class ui-g-12 -->
+    </div>
+    <!-- button novo lancamento -->
+    <div class="ui-g-12">
+      <a pButton label="Novo Lançamento"></a>
     </div>
   <!-- closing div class ui-g -->
   </div>
