--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,8 +61,8 @@
               </td>
               <!-- icones edit and delete -->
               <td class="col-acoes">
-                <a pButton icon="pi pi-pencil"></a>
-                <button pButton icon="pi pi-trash"></button>
+                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
               </td>
             </tr>
         </ng-template>
