--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
       <!-- property binding: [value]="lancamentos". passando um array de objetos(lancamentos) do componente para popular a tabela.
       value é uma propriedade do componente p-table do primeNg.
         aqui já é feito um loop no array lancamentos. -->
-      <p-table [value]="lancamentos" [paginator]="true" [rows]="2">
+      <p-table [value]="lancamentos" [paginator]="true" [rows]="2" [responsive]="true">
         <!-- headers -->
         <ng-template pTemplate="header">
           <tr>
@@ -51,12 +51,26 @@
         <!-- let-lancamento é o mesmo que ngFor="let lancamento of lancamentos" -->
         <ng-template pTemplate="body" let-lancamento>
             <tr>
-              <td>{{lancamento.pessoa}}</td>
-              <td>{{lancamento.descricao}}</td>
-              <td class="col-data-content">{{lancamento.dataVencimento}}</td>
-              <td class="col-data-content">{{lancamento.dataPagamento}}</td>
+              <!-- esses spans servem para mostrar o header quando a resolução ficar menor, como em um smartphone -->
+              <td>
+                <span class="ui-column-title">Pessoa</span>
+                {{lancamento.pessoa}}
+              </td>
+              <td>
+                <span class="ui-column-title">Descrição</span>
+                {{lancamento.descricao}}
+              </td>
+              <td class="col-data-content">
+                <span class="ui-column-title">Vencimento</span>
+                {{lancamento.dataVencimento}}
+              </td>
+              <td class="col-data-content">
+                <span class="ui-column-title">Pagamento</span>
+                {{lancamento.dataPagamento}}
+              </td>
               <td class="col-valor-content"
                 [ngStyle]="{ color: lancamento.tipo === 'DESPESA' ? 'red' : 'blue'}">
+                <span class="ui-column-title">Valor</span>
                 {{lancamento.valor}}
               </td>
               <!-- icones edit and delete -->
