Criando o componente de pesquisa de lançamentos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,93 +1,1 @@
-<div class="container">
-  <!-- using css grid from primeNg -->
-  <div class="ui-g">
-    <!-- css grid 12 columns -->
-    <div class="ui-g-12">
-      <h1>Lançamentos</h1>
-    </div>
-
-    <!-- ui-fluid: gets 100% of available space. all its children will inherit this behavior-->
-    <div class="ui-g-12 ui-fluid">
-      <label>Descrição</label>
-      <!-- pInputText: primeNg diretive, that has primeNg own css style-->
-      <input pInputText type="text">
-    </div>
-
-    <div class="ui-g-12">
-      <label style="display: block">Vencimento</label>
-      <!-- 95px: the exactly size of a standard date format, like 29/01/2019 -->
-      <input pInputText type="text" style="width: 95px">
-
-      <label>até</label>
-      <input pInputText type="text" style="width: 95px">
-    </div>
-
-    <div class="ui-g-12">
-      <button pButton type="submit" label="Pesquisar"></button>
-    </div>
-
-  <!-- closing div class ui-g -->
-  </div>
-
-  <!-- tabela de dados da página de lançamentos-->
-  <div class="ui-g">
-    <div class="ui-g-12">
-      <!-- property binding: [value]="lancamentos". passando um array de objetos(lancamentos) do componente para popular a tabela.
-      value é uma propriedade do componente p-table do primeNg.
-        aqui já é feito um loop no array lancamentos. -->
-      <p-table [value]="lancamentos" [paginator]="true" [rows]="2" [responsive]="true">
-        <!-- headers -->
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Pessoa</th>
-            <th>Descricao</th>
-            <th class="col-data-header">Vencimento</th>
-            <th class="col-data-header">Pagamento</th>
-            <th class="col-valor-header">Valor</th>
-            <th class="col-valor-header"></th>
-          </tr>
-        <!-- closing headers -->
-        </ng-template>
-        <!-- let-lancamento é o mesmo que ngFor="let lancamento of lancamentos" -->
-        <ng-template pTemplate="body" let-lancamento>
-            <tr>
-              <!-- esses spans servem para mostrar o header quando a resolução ficar menor, como em um smartphone -->
-              <td>
-                <span class="ui-column-title">Pessoa</span>
-                {{lancamento.pessoa}}
-              </td>
-              <td>
-                <span class="ui-column-title">Descrição</span>
-                {{lancamento.descricao}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Vencimento</span>
-                {{lancamento.dataVencimento}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Pagamento</span>
-                {{lancamento.dataPagamento}}
-              </td>
-              <td class="col-valor-content"
-                [ngStyle]="{ color: lancamento.tipo === 'DESPESA' ? 'red' : 'blue'}">
-                <span class="ui-column-title">Valor</span>
-                {{lancamento.valor}}
-              </td>
-              <!-- icones edit and delete -->
-              <td class="col-acoes">
-                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
-              </td>
-            </tr>
-        </ng-template>
-      </p-table>
-    <!-- closing div class ui-g-12 -->
-    </div>
-    <!-- button novo lancamento -->
-    <div class="ui-g-12">
-      <a pButton label="Novo Lançamento"></a>
-    </div>
-  <!-- closing div class ui-g -->
-  </div>
-<!-- closing div class container-->
-</div>
+<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
