--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<app-pessoa-cadastro></app-pessoa-cadastro>
+  <app-pessoas-pesquisa></app-pessoas-pesquisa>
 
 <!--
   <app-pessoa-cadastro></app-pessoa-cadastro>
