--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -35,52 +35,7 @@
       <!-- property binding: [value]="lancamentos". passando um array de objetos(lancamentos) do componente para popular a tabela.
       value é uma propriedade do componente p-table do primeNg.
         aqui já é feito um loop no array lancamentos. -->
-      <p-table [value]="lancamentos" [paginator]="true" [rows]="2" [responsive]="true">
-        <!-- headers -->
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Pessoa</th>
-            <th>Descricao</th>
-            <th class="col-data-header">Vencimento</th>
-            <th class="col-data-header">Pagamento</th>
-            <th class="col-valor-header">Valor</th>
-            <th class="col-valor-header"></th>
-          </tr>
-        <!-- closing headers -->
-        </ng-template>
-        <!-- let-lancamento é o mesmo que ngFor="let lancamento of lancamentos" -->
-        <ng-template pTemplate="body" let-lancamento>
-            <tr>
-              <!-- esses spans servem para mostrar o header quando a resolução ficar menor, como em um smartphone -->
-              <td>
-                <span class="ui-column-title">Pessoa</span>
-                {{lancamento.pessoa}}
-              </td>
-              <td>
-                <span class="ui-column-title">Descrição</span>
-                {{lancamento.descricao}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Vencimento</span>
-                {{lancamento.dataVencimento | date:'dd/MM/yyyy'}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Pagamento</span>
-                {{lancamento.dataPagamento | date:'dd/MM/yyyy'}}
-              </td>
-              <td class="col-valor-content"
-                [ngStyle]="{ color: lancamento.tipo === 'DESPESA' ? 'red' : 'blue'}">
-                <span class="ui-column-title">Valor</span>
-                {{lancamento.valor | number:'1.2-2'}}
-              </td>
-              <!-- icones edit and delete -->
-              <td class="col-acoes">
-                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
-              </td>
-            </tr>
-        </ng-template>
-      </p-table>
+        <app-lancamentos-grid [lancamentos]="lancamentos"></app-lancamentos-grid>
     <!-- closing div class ui-g-12 -->
     </div>
     <!-- button novo lancamento -->
