--- a/src/app/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -23,47 +23,7 @@
   <!-- tabela de dados da página de pessoas-->
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="pessoas" [paginator]="true" [rows]="5" [responsive]="true">
-        <!-- headers -->
-        <ng-template let-pessoa pTemplate="header">
-          <tr>
-            <th>Nome</th>
-            <th>Cidade</th>
-            <th class="col-data-header">Estado</th>
-            <th class="col-data-header">Status</th>
-            <th class="col-valor-header"></th>
-          </tr>
-        <!-- closing headers -->
-        </ng-template>
-        <ng-template pTemplate="body" let-pessoa>
-            <tr>
-              <!-- esses spans servem para mostrar o header quando a resolução ficar menor, como em um smartphone -->
-              <td>
-                <span class="ui-column-title">Nome</span>
-                {{pessoa.nome}}
-              </td>
-              <td>
-                <span class="ui-column-title">Cidade</span>
-                {{pessoa.cidade}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Estado</span>
-                {{pessoa.estado}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Status</span>
-                <a href="#" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'" tooltipPosition="top">
-                  {{pessoa.ativo ? 'ativo' : 'inativo'}}
-                </a>
-              </td>
-              <!-- icones edit and delete -->
-              <td class="col-acoes">
-                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
-              </td>
-            </tr>
-        </ng-template>
-      </p-table>
+      <app-pessoas-grid [pessoas]="pessoas"></app-pessoas-grid>
     <!-- closing div class ui-g-12 -->
     </div>
     <!-- button novo lancamento -->
