--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -1,29 +1,80 @@
 <div class="container">
   <!-- using css grid from primeNg -->
   <div class="ui-g">
-    <!-- css grid 12 columns -->
-    <div class="ui-g-12">
-      <h1>Pessoas</h1>
-    </div>
 
-    <!-- ui-fluid: gets 100% of available space. all its children will inherit this behavior-->
-    <div class="ui-g-12 ui-fluid">
-      <label>Nome</label>
-      <!-- pInputText: primeNg diretive, that has primeNg own css style-->
-      <input pInputText type="text">
-    </div>
+    <form autocomplete="off" (ngSubmit)="pesquisar()">
 
-    <div class="ui-g-12">
-      <button pButton type="submit" label="Pesquisar"></button>
-    </div>
+      <!-- css grid 12 columns -->
+      <div class="ui-g-12">
+        <h1>Pessoas</h1>
+      </div>
 
-  <!-- closing div class ui-g -->
-  </div>
+      <!-- ui-fluid: gets 100% of available space. all its children will inherit this behavior-->
+      <div class="ui-g-12 ui-fluid">
+        <label>Nome</label>
+        <!-- pInputText: primeNg diretive, that has primeNg own css style-->
+        <input pInputText type="text" name="nome" [(ngModel)]="filtro.nome">
+      </div>
+
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Pesquisar"></button>
+      </div>
+    </form>
+
+    <!-- closing div class ui-g -->
+    </div>
 
   <!-- tabela de dados da página de pessoas-->
   <div class="ui-g">
     <div class="ui-g-12">
-      <app-pessoas-grid [pessoas]="pessoas"></app-pessoas-grid>
+      <p-table [value]="pessoas" [responsive]="true"
+        [paginator]="true" [rows]="filtro.itensPorPagina"
+        [lazy]="true" [totalRecords]="totalRegistros"
+        (onLazyLoad)="aoMudarPagina($event)">
+        <ng-template pTemplate="emptymessage">
+          Nenhum lançamento encontrado
+        </ng-template>
+        <!-- headers -->
+        <ng-template let-pessoa pTemplate="header">
+          <tr>
+            <th>Nome</th>
+            <th>Cidade</th>
+            <th class="col-data-header">Estado</th>
+            <th class="col-data-header">Status</th>
+            <th class="col-valor-header"></th>
+          </tr>
+        <!-- closing headers -->
+        </ng-template>
+        <ng-template pTemplate="body" let-pessoa>
+            <tr>
+              <!-- esses spans servem para mostrar o header quando a resolução ficar menor, como em um smartphone -->
+              <td>
+                <span class="ui-column-title">Nome</span>
+                {{pessoa.nome}}
+              </td>
+              <td>
+                <span class="ui-column-title">Cidade</span>
+                {{pessoa.endereco.cidade}}
+              </td>
+              <td class="col-data-content">
+                <span class="ui-column-title">Estado</span>
+                {{pessoa.endereco.estado}}
+              </td>
+              <td class="col-data-content">
+                <span class="ui-column-title">Status</span>
+                <a href="#" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'" tooltipPosition="top">
+                  {{pessoa.ativo ? 'ativo' : 'inativo'}}
+                </a>
+              </td>
+              <!-- icones edit and delete -->
+              <td class="col-acoes">
+                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+              </td>
+            </tr>
+        </ng-template>
+      </p-table>
+
     <!-- closing div class ui-g-12 -->
     </div>
     <!-- button novo lancamento -->
