--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -40,7 +40,8 @@
       <p-table [value]="lancamentos" [responsive]="true"
         [paginator]="true" [rows]="filtro.itensPorPagina"
         [lazy]="true" [totalRecords]="totalRegistros"
-        (onLazyLoad)="aoMudarPagina($event)">
+        (onLazyLoad)="aoMudarPagina($event)"
+        #tabela>
         <ng-template pTemplate="emptymessage">
           Nenhum lançamento encontrado
         </ng-template>
@@ -84,7 +85,8 @@
               <!-- icones edit and delete -->
               <td class="col-acoes">
                 <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+                <button pButton icon="pi pi-trash" pTooltip="Excluir"
+                  tooltipPosition="top" (click)="excluir(lancamento)"></button>
               </td>
             </tr>
         </ng-template>
