--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,5 @@
   <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
   <app-pessoas-pesquisa></app-pessoas-pesquisa>
 -->
+
+<ng2-toasty></ng2-toasty>
