--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -86,7 +86,7 @@
               <td class="col-acoes">
                 <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
                 <button pButton icon="pi pi-trash" pTooltip="Excluir"
-                  tooltipPosition="top" (click)="excluir(lancamento)"></button>
+                  tooltipPosition="top" (click)="confirmarExclusao(lancamento)"></button>
               </td>
             </tr>
         </ng-template>
