--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,5 @@
 <app-navbar></app-navbar>
-
-<app-pessoas-pesquisa></app-pessoas-pesquisa>
-
-<!--
-  <app-pessoa-cadastro></app-pessoa-cadastro>
-  <app-lancamento-cadastro></app-lancamento-cadastro>
-  <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
-  <app-pessoas-pesquisa></app-pessoas-pesquisa>
--->
+<router-outlet></router-outlet>
 
 <ng2-toasty></ng2-toasty>
 
