--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -84,7 +84,9 @@
               </td>
               <!-- icones edit and delete -->
               <td class="col-acoes">
-                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+                <a pButton icon="pi pi-pencil" pTooltip="Editar"
+                  tooltipPosition="top"
+                  [routerLink]="['/lancamentos', lancamento.codigo]"></a>
                 <button pButton icon="pi pi-trash" pTooltip="Excluir"
                   tooltipPosition="top" (click)="confirmarExclusao(lancamento)"></button>
               </td>
