--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -72,7 +72,9 @@
               </td>
               <!-- icones edit and delete -->
               <td class="col-acoes">
-                <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+                <a pButton icon="pi pi-pencil"
+                  pTooltip="Editar" tooltipPosition="top"
+                  [routerLink]="['/pessoas', pessoa.codigo]"></a>
                 <button pButton icon="pi pi-trash"
                   pTooltip="Excluir" tooltipPosition="top"
                   (click)="confirmarExclusao(pessoa)"></button>
@@ -85,7 +87,7 @@
     </div>
     <!-- button novo lancamento -->
     <div class="ui-g-12">
-      <a pButton label="Nova Pessoa"></a>
+      <a pButton label="Nova Pessoa" routerLink="/pessoas/nova"></a>
     </div>
   <!-- closing div class ui-g -->
   </div>
