--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -10,7 +10,8 @@
   </div>
 
   <ul class="navbar-menu" [hidden]="!exibindoMenu">
-    <li class="navbar-usuario">José da Silva</li>
+    <!-- usando operador '?' para não dar erro caso não tenha usuario logado-->
+    <li class="navbar-usuario">{{ auth.jwtPayload?.nome}}</li>
     <li class="navbar-menuitem" routerLinkActive="ativo"><a routerLink="/lancamentos">Lançamentos</a></li>
     <li class="navbar-menuitem" routerLinkActive="ativo"><a routerLink="/pessoas">Pessoas</a></li>
     <li class="navbar-menuitem" routerLinkActive="ativo"><a href="#">Logout</a></li>
