--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -87,8 +87,10 @@
                 <a pButton icon="pi pi-pencil" pTooltip="Editar"
                   tooltipPosition="top"
                   [routerLink]="['/lancamentos', lancamento.codigo]"></a>
-                <button pButton icon="pi pi-trash" pTooltip="Excluir"
-                  tooltipPosition="top" (click)="confirmarExclusao(lancamento)"></button>
+                <button pButton icon="pi pi-trash"
+                 pTooltip="Excluir"
+                 tooltipPosition="top" (click)="confirmarExclusao(lancamento)"
+                 [disabled]="!auth.temPermissao('ROLE_REMOVER_LANCAMENTO')"></button>
               </td>
             </tr>
         </ng-template>
