--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,11 @@
 
 <ng2-toasty></ng2-toasty>
 
-<!-- componente de confirmação de exclusão customizado para portugues-->
-<p-confirmDialog header="Confirmação" icon="pi pi-question-circle" #confirmacao>
+<p-confirmDialog header="Confirmação" icon="fa fa-question-circle" #confirmacao>
   <p-footer>
-    <button type="button" pButton icon="pi pi-check-circle" label="Sim"
+    <button type="button" pButton icon="fa-check" label="Sim"
       (click)="confirmacao.accept()"></button>
-    <button type="button" pButton icon="pi pi-times-circle" label="Não"
+    <button type="button" pButton icon="fa-times" label="Não"
       (click)="confirmacao.reject()"></button>
   </p-footer>
 </p-confirmDialog>
