--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-  <!-- botao salvar recebe os dados do formulario-->
   <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
 
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1>{{ editando ? 'Edição de' : 'Novo'}} Lançamento</h1>
+        <h1>{{ editando ? 'Edição de' : 'Novo' }} Lançamento</h1>
       </div>
 
       <div class="ui-g-12">
@@ -20,10 +19,10 @@
           [(ngModel)]="lancamento.dataVencimento"
           #vencimento="ngModel" required></p-calendar>
 
-          <app-message [control]="vencimento" error="required"
+        <app-message [control]="vencimento" error="required"
           text="Informe uma data de vencimento"></app-message>
-
       </div>
+
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
         <p-calendar dateFormat="dd/mm/yy" name="dataPagamento"
@@ -37,11 +36,9 @@
           #descricao="ngModel" required minlength="5">
 
         <app-message [control]="descricao" error="required"
-          text="Informe uma descrição">
-        </app-message>
+          text="Informe a descrição"></app-message>
         <app-message [control]="descricao" error="minlength"
-          text="Mínimo de {{descricao.errors?.minlength?.requiredLength}} caracteres.">
-        </app-message>
+          text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
@@ -55,17 +52,17 @@
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Categoria</label>
         <p-dropdown name="categoria" [options]="categorias"
-          placeholder="Selecione"
+          placeholder="Selecione" [autoWidth]="false"
           [(ngModel)]="lancamento.categoria.codigo"
           required></p-dropdown>
       </div>
+
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Pessoa</label>
         <p-dropdown name="pessoa" [options]="pessoas" placeholder="Selecione"
-        [filter]="true"
-        [(ngModel)]="lancamento.pessoa.codigo"
-        required
-        ></p-dropdown>
+          [autoWidth]="false" [filter]="true"
+          [(ngModel)]="lancamento.pessoa.codigo"
+          required></p-dropdown>
       </div>
 
       <div class="ui-g-12 ui-fluid">
