--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -1,24 +1,20 @@
 <div class="container">
-  <!-- using css grid from primeNg -->
   <div class="ui-g">
 
-    <form autocomplete="off" (ngSubmit)=pesquisar()>
-      <!-- css grid 12 columns -->
+    <form autocomplete="off" (ngSubmit)="pesquisar()">
+
       <div class="ui-g-12">
         <h1>Lançamentos</h1>
       </div>
 
-      <!-- ui-fluid: gets 100% of available space. all its children will inherit this behavior-->
       <div class="ui-g-12 ui-fluid">
         <label>Descrição</label>
-        <!-- pInputText: primeNg diretive, that has primeNg own css style-->
         <input pInputText type="text" name="descricao"
           [(ngModel)]="filtro.descricao">
       </div>
 
       <div class="ui-g-12">
         <label style="display: block">Vencimento</label>
-        <!-- 95px: the exactly size of a standard date format, like 29/01/2019 -->
         <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }"
           name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio"></p-calendar>
 
@@ -30,78 +26,53 @@
       <div class="ui-g-12">
         <button pButton type="submit" label="Pesquisar"></button>
       </div>
+
     </form>
-  <!-- closing div class ui-g -->
   </div>
 
-  <!-- tabela de dados da página de lançamentos-->
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="lancamentos" [responsive]="true"
-        [paginator]="true" [rows]="filtro.itensPorPagina"
-        [lazy]="true" [totalRecords]="totalRegistros"
-        (onLazyLoad)="aoMudarPagina($event)"
-        #tabela>
-        <ng-template pTemplate="emptymessage">
-          Nenhum lançamento encontrado
-        </ng-template>
-        <!-- headers -->
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Pessoa</th>
-            <th>Descricao</th>
-            <th class="col-data-header">Vencimento</th>
-            <th class="col-data-header">Pagamento</th>
-            <th class="col-valor-header">Valor</th>
-            <th class="col-valor-header"></th>
-          </tr>
-        <!-- closing headers -->
-        </ng-template>
-        <!-- let-lancamento é o mesmo que ngFor="let lancamento of lancamentos" -->
-        <ng-template pTemplate="body" let-lancamento>
-            <tr>
-              <!-- esses spans servem para mostrar o header quando a resolução ficar menor, como em um smartphone -->
-              <td>
-                <span class="ui-column-title">Pessoa</span>
-                {{lancamento.pessoa}}
-              </td>
-              <td>
-                <span class="ui-column-title">Descrição</span>
-                {{lancamento.descricao}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Vencimento</span>
-                {{lancamento.dataVencimento | date:'dd/MM/yyyy'}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Pagamento</span>
-                {{lancamento.dataPagamento | date:'dd/MM/yyyy'}}
-              </td>
-              <td class="col-valor-content"
-                [ngStyle]="{ color: lancamento.tipo === 'DESPESA' ? 'red' : 'blue'}">
-                <span class="ui-column-title">Valor</span>
-                {{lancamento.valor | number:'1.2-2'}}
-              </td>
-              <!-- icones edit and delete -->
-              <td class="col-acoes">
-                <a pButton icon="pi pi-pencil" pTooltip="Editar"
-                  tooltipPosition="top"
-                  [routerLink]="['/lancamentos', lancamento.codigo]"></a>
-                <button pButton icon="pi pi-trash"
-                 pTooltip="Excluir"
-                 tooltipPosition="top" (click)="confirmarExclusao(lancamento)"
-                 [disabled]="!auth.temPermissao('ROLE_REMOVER_LANCAMENTO')"></button>
-              </td>
-            </tr>
-        </ng-template>
-      </p-table>
-    <!-- closing div class ui-g-12 -->
+      <p-dataTable [value]="lancamentos" [responsive]="true"
+          emptyMessage="Nenhum lançamento encontrado"
+          [paginator]="true" [rows]="filtro.itensPorPagina"
+          [lazy]="true" [totalRecords]="totalRegistros"
+          (onLazyLoad)="aoMudarPagina($event)"
+          #tabela>
+        <p-column field="pessoa" header="Pessoa"></p-column>
+        <p-column field="descricao" header="Descrição"></p-column>
+        <p-column header="Vencimento" styleClass="col-data">
+            <ng-template let-lanc="rowData" pTemplate="body">
+                <span>{{ lanc.dataVencimento | date:'dd/MM/yyyy' }}</span>
+            </ng-template>
+        </p-column>
+        <p-column header="Pagamento" styleClass="col-data">
+            <ng-template let-lanc="rowData" pTemplate="body">
+                <span>{{ lanc.dataPagamento | date:'dd/MM/yyyy' }}</span>
+            </ng-template>
+        </p-column>
+        <p-column field="valor" header="Valor" styleClass="col-valor">
+          <ng-template let-lanc="rowData" pTemplate="body">
+            <span [style.color]="lanc.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lanc.valor | number:'1.2-2' }}</span>
+          </ng-template>
+        </p-column>
+        <p-column styleClass="col-acoes">
+            <ng-template let-lanc="rowData" pTemplate="body">
+              <a pButton icon="fa-pencil" pTooltip="Editar"
+                tooltipPosition="top"
+                [routerLink]="['/lancamentos', lanc.codigo]"></a>
+              <button pButton icon="fa-trash"
+                pTooltip="Excluir" tooltipPosition="top"
+                (click)="confirmarExclusao(lanc)"
+                [disabled]="!auth.temPermissao('ROLE_REMOVER_LANCAMENTO')"></button>
+            </ng-template>
+        </p-column>
+      </p-dataTable>
     </div>
-    <!-- button novo lancamento -->
+
     <div class="ui-g-12">
       <a pButton label="Novo Lançamento" routerLink="/lancamentos/novo"></a>
     </div>
-  <!-- closing div class ui-g -->
+
   </div>
-<!-- closing div class container-->
+
 </div>
