--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -9,10 +9,8 @@
       <div class="ui-g-12 ui-fluid">
         <label>Nome</label>
         <input pInputText type="text" name="nome"
-        [(ngModel)]="pessoa.nome"
-        #nome="ngModel"
-        required
-        minlength="5">
+          [(ngModel)]="pessoa.nome"
+          #nome="ngModel" required minlength="5">
 
         <app-message [control]="nome" error="required"
           text="Informe o nome"></app-message>
@@ -23,9 +21,8 @@
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Logradouro</label>
         <input pInputText type="text" name="logradouro"
-        [(ngModel)]="pessoa.endereco.logradouro"
-        #logradouro="ngModel"
-        required>
+          [(ngModel)]="pessoa.endereco.logradouro"
+          #logradouro="ngModel" required>
 
         <app-message [control]="logradouro" error="required"
           text="Informe o logradouro"></app-message>
@@ -34,27 +31,27 @@
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Número</label>
         <input pInputText type="text" name="numero"
-        [(ngModel)]="pessoa.endereco.numero"
-        #numero="ngModel" required>
+          [(ngModel)]="pessoa.endereco.numero"
+          #numero="ngModel" required>
 
-      <app-message [control]="numero" error="required"
-        text="Informe o número"></app-message>
+        <app-message [control]="numero" error="required"
+          text="Informe o número"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Complemento</label>
         <input pInputText type="text" name="complemento"
-          [(ngModel)]="pessoa.endereco.complemento">
+        [(ngModel)]="pessoa.endereco.complemento">
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Bairro</label>
         <input pInputText type="text" name="bairro"
-        [(ngModel)]="pessoa.endereco.bairro"
-        #bairro="ngModel" required>
+          [(ngModel)]="pessoa.endereco.bairro"
+          #bairro="ngModel" required>
 
-      <app-message [control]="bairro" error="required"
-        text="Informe o bairro"></app-message>
+        <app-message [control]="bairro" error="required"
+          text="Informe o bairro"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
@@ -70,26 +67,26 @@
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Cidade</label>
         <input pInputText type="text" name="cidade"
-        [(ngModel)]="pessoa.endereco.cidade"
-        #cidade="ngModel" required>
+          [(ngModel)]="pessoa.endereco.cidade"
+          #cidade="ngModel" required>
 
-        <app-message [control]="cidade" error="required"
-        text="Informe a cidade"></app-message>
+          <app-message [control]="cidade" error="required"
+          text="Informe a cidade"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Estado</label>
         <input pInputText type="text" name="estado"
-        [(ngModel)]="pessoa.endereco.estado"
-        #estado="ngModel" required>
+          [(ngModel)]="pessoa.endereco.estado"
+          #estado="ngModel" required>
 
-        <app-message [control]="estado" error="required"
-        text="Informe o estado"></app-message>
+          <app-message [control]="estado" error="required"
+          text="Informe o estado"></app-message>
       </div>
 
       <div class="ui-g-12">
         <button pButton type="submit" label="Salvar" [disabled]="f.invalid"></button>
-        <button pButton type="button" label="Novo" class="ui-button-info"
+        <button pButton type="button" label="Nova" class="ui-button-info"
           (click)="nova(f)"></button>
 
         <a routerLink="/pessoas">Voltar para a pesquisa</a>
@@ -97,5 +94,4 @@
     </div>
 
   </form>
-
 </div>
