--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -1,95 +1,62 @@
 <div class="container">
-  <!-- using css grid from primeNg -->
   <div class="ui-g">
 
     <form autocomplete="off" (ngSubmit)="pesquisar()">
 
-      <!-- css grid 12 columns -->
       <div class="ui-g-12">
         <h1>Pessoas</h1>
       </div>
 
-      <!-- ui-fluid: gets 100% of available space. all its children will inherit this behavior-->
       <div class="ui-g-12 ui-fluid">
         <label>Nome</label>
-        <!-- pInputText: primeNg diretive, that has primeNg own css style-->
         <input pInputText type="text" name="nome" [(ngModel)]="filtro.nome">
       </div>
 
       <div class="ui-g-12">
         <button pButton type="submit" label="Pesquisar"></button>
       </div>
+
     </form>
 
-    <!-- closing div class ui-g -->
-    </div>
+  </div>
 
-  <!-- tabela de dados da página de pessoas-->
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="pessoas" [responsive]="true"
+      <p-dataTable [value]="pessoas" [responsive]="true"
+        emptyMessage="Nenhuma pessoa encontrada"
         [paginator]="true" [rows]="filtro.itensPorPagina"
         [lazy]="true" [totalRecords]="totalRegistros"
         (onLazyLoad)="aoMudarPagina($event)"
         #tabela>
-        <ng-template pTemplate="emptymessage">
-          Nenhum lançamento encontrado
-        </ng-template>
-        <!-- headers -->
-        <ng-template let-pessoa pTemplate="header">
-          <tr>
-            <th>Nome</th>
-            <th>Cidade</th>
-            <th class="col-data-header">Estado</th>
-            <th class="col-data-header">Status</th>
-            <th class="col-valor-header"></th>
-          </tr>
-        <!-- closing headers -->
-        </ng-template>
-        <ng-template pTemplate="body" let-pessoa>
-            <tr>
-              <!-- esses spans servem para mostrar o header quando a resolução ficar menor, como em um smartphone -->
-              <td>
-                <span class="ui-column-title">Nome</span>
-                {{pessoa.nome}}
-              </td>
-              <td>
-                <span class="ui-column-title">Cidade</span>
-                {{pessoa.endereco.cidade}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Estado</span>
-                {{pessoa.endereco.estado}}
-              </td>
-              <td class="col-data-content">
-                <span class="ui-column-title">Status</span>
-                <a href="#"
-                  [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'"
-                  tooltipPosition="top"
-                  (click)="alternarStatus(pessoa)">
-                  {{pessoa.ativo ? 'ativo' : 'inativo'}}
+          <p-column field="nome" header="Nome"></p-column>
+          <p-column field="endereco.cidade" header="Cidade"></p-column>
+          <p-column field="endereco.estado" header="Estado"></p-column>
+          <p-column field="ativo" header="Status">
+            <ng-template let-pes="rowData" pTemplate="body">
+                <a href="javascript:;"
+                    [pTooltip]="pes.ativo ? 'Desativar' : 'Ativar'"
+                    tooltipPosition="top"
+                    (click)="alternarStatus(pes)">
+                  {{ pes.ativo ? 'Ativo' : 'Inativo' }}
                 </a>
-              </td>
-              <!-- icones edit and delete -->
-              <td class="col-acoes">
-                <a pButton icon="pi pi-pencil"
-                  pTooltip="Editar" tooltipPosition="top"
-                  [routerLink]="['/pessoas', pessoa.codigo]"></a>
-                <button pButton icon="pi pi-trash"
-                  pTooltip="Excluir" tooltipPosition="top"
-                  (click)="confirmarExclusao(pessoa)"></button>
-              </td>
-            </tr>
-        </ng-template>
-      </p-table>
-
-    <!-- closing div class ui-g-12 -->
+            </ng-template>
+          </p-column>
+          <p-column styleClass="col-acoes">
+            <ng-template let-pes="rowData" pTemplate="body">
+              <a pButton icon="fa-pencil"
+                pTooltip="Editar" tooltipPosition="top"
+                [routerLink]="['/pessoas', pes.codigo]"></a>
+              <button pButton icon="fa-trash"
+                pTooltip="Excluir" tooltipPosition="top"
+                (click)="confirmarExclusao(pes)"></button>
+            </ng-template>
+          </p-column>
+      </p-dataTable>
     </div>
-    <!-- button novo lancamento -->
+
     <div class="ui-g-12">
       <a pButton label="Nova Pessoa" routerLink="/pessoas/nova"></a>
     </div>
-  <!-- closing div class ui-g -->
   </div>
-<!-- closing div class container-->
+
 </div>
