--- a/src/styles.css
+++ b/src/styles.css
@@ -5,14 +5,23 @@ body {
   color: #404C51;
 }
 
+a {
+  color: #337ab7;
+  text-decoration: none;
+}
+
+a:hover, a:focus {
+  text-decoration: underline;
+}
+
 label {
   font-weight: bold;
 }
 
-/* using media queries:
-  if the screen size is => 1200px
-  the following style will apply
-*/
+.ui-dropdown-filter-container {
+  width: 100%;
+}
+
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
@@ -20,18 +29,13 @@ label {
   }
 }
 
-.col-valor-header {
+.col-valor {
   width: 120px;
-}
-.col-valor-content {
   text-align: right;
 }
 
-.col-data-header {
+.col-data {
   width: 120px;
-}
-
-.col-data-content {
   text-align: center;
 }
 
@@ -39,4 +43,3 @@ label {
   width: 90px;
   text-align: center;
 }
-
